# invenio-userprofiles

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.md  README.rst  RELEASE-NOTES.rst  constraints-min.txt  pytest.ini  requirements-devel.txt  run-i18n-tests.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  index.rst  make.bat  usage.rst
examples/: app-fixtures.sh  app-setup.sh  app-teardown.sh  app.py  requirements.txt
examples/instance/: .bowerrc  bower.json
examples/templates/: authenticated.html
invenio_userprofiles/: __init__.py  admin.py  api.py  config.py  ext.py  forms.py  gettext.py  model_ext.py  models.py  proxies.py  utils.py  validators.py  version.py  views.py
invenio_userprofiles/alembic/: 41157f1933d6_remove_table.py  71634726ec7e_create_userprofiles_branch.py  c25ef2c50ffa_create_userprofiles_tables.py
invenio_userprofiles/templates/invenio_userprofiles/: base_cover.html  register_user.html
invenio_userprofiles/templates/invenio_userprofiles/settings/: _macros.html  base.html  profile.html
invenio_userprofiles/templates/semantic-ui/invenio_userprofiles/: register_user.html
invenio_userprofiles/translations/: messages.pot
invenio_userprofiles/translations/af/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/ar/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/bg/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/ca/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/cs/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/da/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/de/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/de_AT/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/de_DE/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/el/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/en/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/en_AT/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/en_HU/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/es/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/es_CU/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/es_MX/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/et/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/et_EE/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/fa/LC_MESSAGES/: messages.po
invenio_userprofiles/translations/fa_IR/LC_MESSAGES/: messages.po
tests/: conftest.py  helpers.py  test_admin.py  test_api.py  test_examples_app.py  test_forms.py  test_invenio_userprofile.py  test_models.py  test_utils.py  test_validators.py  test_views.py
(+33 files in other folders)
