# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2022 CERN.
# Copyright (C) 2021      TU Wien.
# Copyright (C) 2022-2023 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-userprofiles
version = attr: invenio_userprofiles.__version__
description = User profiles module for Invenio.
long_description = file: README.rst, CHANGES.rst
keywords = invenio profile account user
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-userprofiles
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-accounts>=2.0.0
    invenio-i18n>=2.0.0,<3.0.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=1.4.7
    invenio-db[mysql,postgresql,versioning]>=1.0.14
    sphinx>=4.5
admin =
    # empty for backward compatibility
postgresql =
    # empty for backward compatibility
mysql =
    # empty for backward compatibility
sqlite =
    # empty for backward compatibility

[options.entry_points]
invenio_base.api_apps =
    invenio_userprofiles = invenio_userprofiles:InvenioUserProfiles
invenio_base.api_finalize_app =
    invenio_userprofiles = invenio_userprofiles.ext:api_finalize_app
invenio_base.apps =
    invenio_userprofiles = invenio_userprofiles:InvenioUserProfiles
invenio_base.blueprints =
    invenio_userprofiles = invenio_userprofiles.views:create_blueprint
invenio_base.finalize_app =
    invenio_userprofiles = invenio_userprofiles.ext:finalize_app
invenio_db.alembic =
    invenio_userprofiles = invenio_userprofiles:alembic
invenio_i18n.translations =
    messages = invenio_userprofiles

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_userprofiles/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_userprofiles/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_userprofiles/translations/messages.pot
output-dir = invenio_userprofiles/translations/

[update_catalog]
input-file = invenio_userprofiles/translations/messages.pot
output-dir = invenio_userprofiles/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle  --doctest-glob="*.rst" --doctest-modules --cov=invenio_userprofiles --cov-report=term-missing
testpaths = tests invenio_userprofiles
